Lev - Fixed the gap for the small resolution

--- a/css/custom.css
+++ b/css/custom.css
@@ -77,7 +77,8 @@ li>.skill{
 
  @media (max-width: 1000px) {
     .page-container {
-     padding: 10px;
+
+     padding: 15px;
      margin: 0;
     }
 
